# DaVinci

./: .gitignore  AUDIT.md  HUD.bat  LICENSE  PR_BODY.md  README.md  davinci.bat  davinci.ps1  install.bat  pyproject.toml
davinci/: __init__.py  __main__.py  cli.py  config.py  coordinator.py  dashboard.py  hud.py
davinci/agents/: __init__.py  architect.py  base.py  coder.py  reviewer.py  tester.py
davinci/llm/: __init__.py  client.py
davinci/memory/: __init__.py  context.py  decisions.py
davinci/rag/: __init__.py  embedder.py  indexer.py  retriever.py  store.py
davinci/tools/: __init__.py  file_tools.py
tests/: test_agents.py  test_config.py  test_coordinator.py  test_file_tools.py  test_llm.py  test_memory.py  test_rag.py  test_retriever.py  test_security.py
