[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "davinci"
version = "0.1.0"
description = "Local AI coding agent — your personal Copilot"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
davinci = "davinci.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
